remove pagable